tests/invalid/CoCoOutputPortDefinedIfEmitCall-2.nestml
/**
 * 
 *  CoCoOutputPortDefinedIfEmitCall-2.nestml
 *
 *  This file is part of NEST.
 *
 *  Copyright (C) 2004 The NEST Initiative
 *
 *  NEST is free software: you can redistribute it and/or modify
 *  it under the terms of the GNU General Public License as published by
 *  the Free Software Foundation, either version 2 of the License, or
 *  (at your option) any later version.
 *
 *  NEST is distributed in the hope that it will be useful,
 *  but WITHOUT ANY WARRANTY; without even the implied warranty of
 *  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 *  GNU General Public License for more details.
 *
 *  You should have received a copy of the GNU General Public License
 *  along with NEST.  If not, see <http://www.gnu.org/licenses/>.
 *
 *
 * This model is used to test if broken CoCos are identified correctly. Here, if the output port has the wrong type. Based on the ``iaf_psc_exp`` model at Sep 2020.
 * Negative case.
*/
neuron iaf_psc_exp:

  state:
    r integer                               # counts number of tick during the refractory period
  end

  initial_values:
    V_abs mV = 0 mV
  end

  equations:
    kernel I_kernel_in = exp(-1/tau_syn_in*t)
    kernel I_kernel_ex = exp(-1/tau_syn_ex*t)
    recordable inline V_m mV = V_abs + E_L # Membrane potential.
    inline I_syn pA = convolve(I_kernel_in, in_spikes) + convolve(I_kernel_ex, ex_spikes) + I_e + I_stim
    V_abs' = -V_abs / tau_m + I_syn / C_m
  end

  parameters:
    C_m pF = 250 pF       # Capacity of the membrane
    tau_m ms = 10 ms      # Membrane time constant
    tau_syn_in ms = 2 ms  # Time constant of synaptic current
    tau_syn_ex ms = 2 ms  # Time constant of synaptic current
    t_ref ms = 2 ms       # Duration of refractory period
    E_L  mV = -70 mV      # Resting potential
    V_reset mV = -70 mV - E_L # reset value of the membrane potential
    Theta   mV = -55 mV - E_L # Threshold, RELATIVE TO RESTING POTENTIAL (!).
                                   # I.e. the real threshold is (E_L_+V_th_)

    # constant external input current
    I_e pA = 0 pA
  end

  internals:
    RefractoryCounts integer = steps(t_ref) # refractory time in steps
  end

  input:
    ex_spikes pA <- excitatory spike
    in_spikes pA <- inhibitory spike
    I_stim pA <- current
  end

  output: current

  update:
    if r == 0: # neuron not refractory, so evolve V
      integrate_odes()
    else:
      r = r - 1 # neuron is absolute refractory
    end

    if V_abs >= Theta: # threshold crossing
      r = RefractoryCounts
      V_abs = V_reset
      emit_spike()
    end

  end

end
